# altv-weapon-tool

./: .gitmodules  CMakeLists.txt
src/: Main.cpp  Main.h  WeaponTool.cpp  WeaponTool.h  WindowLayer.cpp  WindowLayer.h  WindowManager.cpp  WindowManager.h
src/Layers/: BackgroundLayer.hpp  MainTabLayer.hpp  MenuBarLayer.hpp
